vix/tests/checker-corpus/accept/bool-match.vix
pub fn choose(cond: Bool) -> Int {
    match cond {
        true => 1,
        false => 0,
    }
}
